# chat-exporter-self

./: README.md  pyproject.toml  readme.md
chat_exporter/: chat_exporter.py
chat_exporter/construct/: message.py  transcript.py
chat_exporter/construct/assets/: component.py
chat_exporter/ext/: discord_import.py  discord_utils.py  html_generator.py
chat_exporter/html/: base.html
chat_exporter/html/message/: reference_forwarded.html
chat_exporter/parse/: markdown.py  mention.py
